--- a/Exercicio7.html
+++ b/Exercicio7.html
@@ -1,13 +1,10 @@
 <html>
 <head>
-    <script src="funcoes.js"> </script>
+    <script src="Funcoes.js"> </script>
 </head>
 <body>
 <p>
-   novo salario <input id="sl">
-</p>
-<p>
-    salario <input id="slv">
+    salario <input id="salario">
 </p>
 <p>
 <button onclick="Exercicio7()"> calcular </button>
